# vibe-cli

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: release-template.md
.github/workflows/: ci.yml
cli/: __init__.py  main.py  vibe.py
cli/commands/: __init__.py  config_commands.py  git_commands.py  npm_commands.py  python_commands.py
cli/utils/: __init__.py  config.py  formatting.py  shell_detection.py  telemetry.py
examples/: vibe.config.json
node-package/: .gitignore  README.md  jest.config.ts  package.json  tsconfig.json
node-package/src/: main.ts
node-package/src/commands/: uninstall.ts
node-package/src/utils/: logger.ts
node-package/tests/: cli.test.ts  jest.setup.ts
node-package/types/: node.d.ts
python-package/: .gitignore  README.md  pyproject.toml
python-package/tests/: test_main.py
python-package/vibe/: __init__.py  constants.py  main.py
python-package/vibe/commands/: config.py  uninstall.py
python-package/vibe/utils/: logger.py
scripts/: generate_config.py  install.py  install.sh  uninstall.py  uninstall.sh  update.py  vibe-cli.json  vibe-cli.rb
shared/: commands.yaml  utils.ts  vibe_cli.sh  vibe_language_commands.yaml
tests/: test_cli.py
vibe/: cli.py
vibe/translators/: git.py  npm.py  python.py
