[build-system]
requires = ['setuptools>=42', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'vibe-cli'
version = '0.1.0'
description = 'Natural-language CLI for git, npm, python (and more!)'
authors = [{name='Ian Kiku', email='hey@vibetools.dev'}]
requires-python = '>=3.7'
dependencies = ['typer[all]>=0.7']
readme = 'README.md'

[project.optional-dependencies]
test = [
  'pytest>=7.0', # Using a reasonably modern version of pytest
]

[project.scripts]
vibe = 'vibe.cli:app'
