[tool.poetry]
name = "vibe-cli"
version = "0.1.0"
description = "Natural language wrapper for git, npm, and python commands"
authors = ["Ian Kiku <hey@vibecloud.dev>"]
readme = "README.md"
license = "AGPL-3.0"
packages = [{include = "vibe"}]
homepage = "https://vibecloud.dev"
repository = "https://github.com/iankiku/vibe-cli"
documentation = "https://github.com/iankiku/vibe-cli#readme"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
typer = {extras = ["all"], version = "^0.9.0"}
pyyaml = "^6.0"
requests = "^2.28.0"
colorama = "^0.4.6"  # For cross-platform terminal colors

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"

[tool.poetry.scripts]
vibe-py = "vibe.main:main"
install-alias = "vibe.main:install_alias"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
